###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "gazelle", version = "0.35.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_gin_contrib_zap",
    "com_github_gin_gonic_gin",
    "com_github_google_wire",
    "com_github_gorilla_websocket",
    "com_github_line_line_bot_sdk_go_v8",
    "com_github_pkg_errors",
    "com_github_spf13_cobra",
    "com_github_spf13_viper",
    "com_github_stretchr_testify",
    "com_github_testcontainers_testcontainers_go",
    "com_github_testcontainers_testcontainers_go_modules_mongodb",
    "org_mongodb_go_mongo_driver",
    "org_uber_go_mock",
    "org_uber_go_zap",
)
