###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "gazelle", version = "0.35.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_aws_aws_lambda_go", "com_github_awslabs_aws_lambda_go_api_proxy", "com_github_coreos_go_oidc_v3", "com_github_gin_contrib_sessions", "com_github_gin_contrib_zap", "com_github_gin_gonic_gin", "com_github_google_uuid", "com_github_google_wire", "com_github_line_line_bot_sdk_go_v8", "com_github_pkg_errors", "com_github_spf13_cobra", "com_github_spf13_viper", "com_github_stretchr_testify", "com_github_swaggo_files", "com_github_swaggo_gin_swagger", "com_github_swaggo_swag", "com_github_testcontainers_testcontainers_go", "com_github_testcontainers_testcontainers_go_modules_mongodb", "org_golang_x_oauth2", "org_mongodb_go_mongo_driver", "org_uber_go_mock", "org_uber_go_zap")

bazel_dep(name = "rules_oci", version = "1.4.0")
bazel_dep(name = "rules_pkg", version = "0.9.1")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "alpine",
    image = "docker.io/library/alpine",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    tag = "3",
)
use_repo(oci, "alpine")
