load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_tarball")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "adapter_lib",
    srcs = ["main.go"],
    importpath = "github.com/blackhorseya/ekko/adapter",
    visibility = ["//visibility:private"],
    deps = ["//adapter/cmd"],
)

go_binary(
    name = "adapter",
    embed = [":adapter_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "tar",
    srcs = [":adapter"],
)

oci_image(
    name = "image",
    base = "@alpine",
    entrypoint = ["/adapter"],
    tars = [":tar"],
)

oci_tarball(
    name = "tarball",
    image = ":image",
    repo_tags = ["ghcr.io/blackhorseya/ekko:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "ghcr.io/blackhorseya/ekko",
)
