load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "info.go",
        "root.go",
        "start.go",
    ],
    importpath = "github.com/blackhorseya/ekko/adapter/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/restful",
        "//app/infra/configx",
        "//pkg/cmdx",
        "//pkg/configx",
        "//pkg/contextx",
        "@com_github_spf13_cobra//:cobra",
        "@org_uber_go_zap//:zap",
    ],
)
