load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "info.go",
        "root.go",
        "start.go",
    ],
    importpath = "github.com/blackhorseya/ekko/adapter/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/platform/rest",
        "//app/infra/configx",
        "//pkg/cmdx",
        "@com_github_spf13_cobra//:cobra",
    ],
)
