load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

go_library(
    name = "ekko_lib",
    srcs = ["main.go"],
    importpath = "github.com/blackhorseya/ekko/adapter/ekko",
    visibility = ["//visibility:private"],
    deps = ["//adapter/ekko/cmd"],
)

go_binary(
    name = "ekko",
    embed = [":ekko_lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = "@alpine_linux_amd64//image",
    directory = "/app",
    entrypoint = ["./ekko"],
    files = [":ekko"],
    workdir = "/app",
)

container_push(
    name = "push-image",
    format = "Docker",
    image = ":image",
    registry = "{dockerRegistry}",
    repository = "ekko",
    tag = "{gitVersion}",
)
