load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "restful",
    srcs = [
        "impl.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/ekko/adapter/restful",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/restful/cmds",
        "//adapter/restful/templates",
        "//adapter/restful/v1:restful",
        "//app/domain/workflow/biz",
        "//app/domain/workflow/repo/issue/mongodb",
        "//entity/domain/identity/model",
        "//entity/domain/workflow/biz",
        "//pkg/adapterx",
        "//pkg/authx",
        "//pkg/configx",
        "//pkg/contextx",
        "//pkg/linebotx",
        "//pkg/storage/mongodbx",
        "//pkg/transports/httpx",
        "@com_github_gin_contrib_sessions//:sessions",
        "@com_github_gin_contrib_sessions//cookie",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_google_wire//:wire",
        "@com_github_line_line_bot_sdk_go_v8//linebot",
        "@com_github_line_line_bot_sdk_go_v8//linebot/messaging_api",
        "@com_github_line_line_bot_sdk_go_v8//linebot/webhook",
        "@com_github_spf13_viper//:viper",
        "@org_uber_go_zap//:zap",
    ],
)
