load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "task_restful_lib",
    srcs = [
        "main.go",
        "service.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/todo-app/cmd/task_restful",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/adapter/task/restful",
        "//internal/app/domain/task/biz",
        "//internal/app/domain/task/biz/repo",
        "//internal/pkg/config",
        "//internal/pkg/genx",
        "//internal/pkg/httpx",
        "//internal/pkg/log",
        "//internal/pkg/storage/mariadb",
        "//pkg/adapters",
        "//pkg/httpx",
        "@com_github_google_wire//:wire",
        "@com_github_pkg_errors//:errors",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "task_restful",
    embed = [":task_restful_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "task_restful_image",
    embed = [":task_restful_lib"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)
