load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "authx",
    srcs = ["authenticator.go"],
    importpath = "github.com/blackhorseya/ekko/pkg/authx",
    visibility = ["//visibility:public"],
    deps = [
        "//app/infra/configx",
        "//pkg/contextx",
        "@com_github_coreos_go_oidc_v3//oidc",
        "@org_golang_x_oauth2//:oauth2",
    ],
)
