load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "fuglex",
    srcs = [
        "client.go",
        "dialer.go",
        "mock_dialer.go",
        "types.go",
        "websocket.go",
    ],
    importpath = "github.com/blackhorseya/ekko/pkg/fuglex",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/configx",
        "//pkg/contextx",
        "@com_github_gorilla_websocket//:websocket",
        "@com_github_pkg_errors//:errors",
        "@org_uber_go_mock//gomock",
    ],
)
