load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "genx",
    srcs = [
        "genx.go",
        "mock_Generator.go",
    ],
    importpath = "github.com/blackhorseya/todo-app/pkg/genx",
    visibility = ["//visibility:public"],
    deps = ["@com_github_stretchr_testify//mock"],
)
