load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "httpx",
    srcs = [
        "httpx.go",
        "mock_httpx.go",
    ],
    importpath = "github.com/blackhorseya/ekko/pkg/httpx",
    visibility = ["//visibility:public"],
    deps = ["@com_github_golang_mock//gomock"],
)
