load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "notifier",
    srcs = [
        "line.go",
        "mock_notifier.go",
        "notifier.go",
    ],
    importpath = "github.com/blackhorseya/ekko/pkg/notifier",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/configx",
        "//pkg/contextx",
        "@org_uber_go_mock//gomock",
    ],
)
