load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "otelx",
    srcs = ["otel.go"],
    importpath = "github.com/blackhorseya/ekko/pkg/otelx",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/contextx",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel//semconv/v1.4.0:v1_4_0",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc//:otlptracegrpc",
        "@io_opentelemetry_go_otel_sdk//resource",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)
