load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "response",
    srcs = ["response.go"],
    importpath = "github.com/blackhorseya/ekko/pkg/response",
    visibility = ["//visibility:public"],
)

go_test(
    name = "response_test",
    srcs = ["resonse_test.go"],
    embed = [":response"],
    deps = ["@com_github_stretchr_testify//suite"],
)
