load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "response",
    srcs = [
        "middleware.go",
        "response.go",
    ],
    importpath = "github.com/blackhorseya/ekko/pkg/response",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gin_gonic_gin//:gin"],
)
