load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "linebot",
    srcs = ["impl.go"],
    importpath = "github.com/blackhorseya/ekko/adapter/platform/linebot",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/platform/wirex",
        "//pkg/adapterx",
        "//pkg/transports/httpx",
        "@com_github_gin_gonic_gin//:gin",
    ],
)
