load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "linebot",
    srcs = [
        "impl.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/ekko/adapter/platform/linebot",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/platform/wirex",
        "//app/domain/todo/biz",
        "//app/domain/todo/repo/todo",
        "//app/infra/authx",
        "//app/infra/configx",
        "//pkg/adapterx",
        "//pkg/logging",
        "//pkg/storage/mongodbx",
        "//pkg/transports/httpx",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_google_wire//:wire",
        "@com_github_spf13_viper//:viper",
    ],
)
