load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "linebot",
    srcs = [
        "impl.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/ekko/adapter/platform/linebot",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/platform/linebot/command",
        "//adapter/platform/wirex",
        "//app/domain/todo/biz",
        "//app/domain/todo/repo/todo",
        "//app/infra/authx",
        "//app/infra/configx",
        "//entity/domain/identity/model",
        "//pkg/adapterx",
        "//pkg/contextx",
        "//pkg/linebotx",
        "//pkg/logging",
        "//pkg/responsex",
        "//pkg/storage/mongodbx",
        "//pkg/transports/httpx",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_google_wire//:wire",
        "@com_github_line_line_bot_sdk_go_v8//linebot",
        "@com_github_line_line_bot_sdk_go_v8//linebot/messaging_api",
        "@com_github_line_line_bot_sdk_go_v8//linebot/webhook",
        "@com_github_spf13_viper//:viper",
        "@org_uber_go_zap//:zap",
    ],
)
