load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "rest",
    srcs = [
        "impl.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/ekko/adapter/platform/rest",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/api/platform_rest",
        "//adapter/platform/rest/v1:rest",
        "//adapter/platform/wirex",
        "//app/domain/todo/biz",
        "//app/domain/todo/repo/todo",
        "//app/infra/authx",
        "//app/infra/configx",
        "//pkg/adapterx",
        "//pkg/contextx",
        "//pkg/logging",
        "//pkg/otelx",
        "//pkg/responsex",
        "//pkg/storage/mongodbx",
        "//pkg/transports/httpx",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_google_wire//:wire",
        "@com_github_spf13_viper//:viper",
        "@com_github_swaggo_files//:files",
        "@com_github_swaggo_gin_swagger//:gin-swagger",
        "@org_uber_go_zap//:zap",
    ],
)
