load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = [
        "restful.go",
        "service.go",
    ],
    importpath = "github.com/blackhorseya/ekko/adapter/restful/app",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/restful/api/docs",
        "//adapter/restful/app/v1:app",
        "//entity/domain/issue/biz",
        "//internal/pkg/httpx",
        "//pkg/adapters",
        "//pkg/contextx",
        "//pkg/er",
        "//pkg/httpx",
        "//pkg/response",
        "@com_github_gin_contrib_zap//:zap",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_google_wire//:wire",
        "@com_github_pkg_errors//:errors",
        "@com_github_swaggo_files//:files",
        "@com_github_swaggo_gin_swagger//:gin-swagger",
        "@org_uber_go_zap//:zap",
    ],
)
