load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmds",
    srcs = ["cmds.go"],
    importpath = "github.com/blackhorseya/ekko/adapter/restful/cmds",
    visibility = ["//visibility:public"],
    deps = [
        "//entity/domain/identity/model",
        "//entity/domain/workflow/agg",
        "//entity/domain/workflow/biz",
        "//pkg/contextx",
        "@com_github_line_line_bot_sdk_go_v8//linebot/messaging_api",
    ],
)
