load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "templates",
    srcs = ["templates.go"],
    embedsrcs = [
        "footer.html",
        "header.html",
        "index.html",
        "user.html",
    ],
    importpath = "github.com/blackhorseya/ekko/adapter/restful/templates",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gin_gonic_gin//:gin"],
)
