load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "restful",
    srcs = ["api.go"],
    importpath = "github.com/blackhorseya/ekko/adapter/restful/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/restful/v1/auth",
        "//pkg/authx",
        "@com_github_gin_gonic_gin//:gin",
    ],
)
